Fix styles for feature on mobile

--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -151,8 +151,9 @@
 
 .feature {
   min-height: 200px;
+  max-width: 800px;
   background-color: $theme-primary-1;
-  margin: 0 20px;
+  margin: 0 auto;
   transform: translateY(-30px);
 
   .col {
@@ -164,6 +165,7 @@
     width: 100%;
     background-size: cover;
     border-radius: 8px;
+    background-position: center;
 
     h2 {
       position: relative;
@@ -181,6 +183,6 @@
     position: relative;
     top: 40%;
     left: 20%;
-    width: 90%;
+    width: 85%;
   }
 }
